# TheGadget

./: .gitignore  LICENSE  README.md  TheGadget (symlink)  TheGadget.desktop  game_stats.json  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  settings.conf
thegadget/: __main__.py  __version__.py  game.py  gui.py  intel.py  intro.py  load.py  map.py  nltk1.py  osmp.py  plot.py  site.py  spatialite.py  stats.py  tech.py  utils.py  wiki.py
thegadget/docs/: __main__.py
thegadget/resources/database/: MED-contract-personnel-statistics.csv  TheGadget.db  TheGadget.sql  accidents.txt  expenses.txt  persons.ini
thegadget/resources/guiopedia/: controls.html  index.html  intel.html  intro.html  research.html  tutorial.html  tutorial2.html  tutorial3.html
thegadget/resources/themes/: thegadget_theme.json
