[tool.poetry]
name = "thegadget"
version = "0.9.1"
description = "A strategic simulation, written in Python."
authors = ["Michael John <michael.john@gmx.at>"]
license = "MIT"
readme = "README.md"
include = [
    "thegadget/locales/**/LC_MESSAGES/*.mo",
    "thegadget/resources/database/*",
    "thegadget/resources/images/*",
    "thegadget/resources/images/events/*",
    "thegadget/resources/maps/*",
    "thegadget/resources/music/*",
    "thegadget/resources/dlls/*",
]
exclude = [
    "thegadget/resources/unused/*",
]

[tool.poetry.scripts]
thegadget = 'thegadget.__main__:main'
TheGadget = 'thegadget.__main__:main'

[tool.poetry.dependencies]
python = "^3.8"
# removed due to incompatibilities: pygame = "^2.4.0"
python-gettext = "^5.0"
pygame-ce = "^2.3.0"
pygame-gui = "^0.6.9"
cairosvg = "^2.7.0"
# removed due to incompatibilities: pygame-menu = "^4.4.3"
pygame-menu-ce = "^4.4.3"
# TODO: need these for windows:
# matplotlib
# basemap
# msvc-runtime
# removed due to incompatibilities
#pygame-animatedgif = "^0.1.0"
moviepy = "^1.0.3"
py-staticmaps = "^0.4.0"
pycairo = "^1.23.0"
pillow = "8.4.0"
geopandas = "^0.13.2"
# https://github.com/python-poetry/poetry/issues/7936#issuecomment-1556767769
urllib3 = "<=2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.12.2"
python-gettext = "^5.0"
pygame-ce = "^2.3.0"
pygame-gui = "^0.6.9"
osmnx = "^1.4.0"
nltk = "^3.8.1"
matplotlib = "^3.7.1"
basemap = "^1.3.7"
osmpythontools = "^0.3.5"
# https://github.com/python-poetry/poetry/issues/7936#issuecomment-1556767769
urllib3 = "<=2.0"
shapely = "^2.0.1"
geopandas = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
homepage = "https://github.com/amstelchen/TheGadget"
repository = "https://github.com/amstelchen/TheGadget"
documentation = "https://github.com/amstelchen/TheGadget"

[tool.ruff]
line-length = 120
ignore = [
    "F401",
    "F403",
    "F405",
    "F841",
    "E501",
    "E701",
    "E702",
]

[tool.flake8]
ignore = [
    "F401",
    "F403",
    "F405",
    "F841",
    "E501",
    "E701",
    "E702",
]